--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -35,6 +35,8 @@ treeherder:
         'Fetch': 'Fetch and store content'
         'Fxfn-l': 'Firefox functional tests (local)'
         'Fxfn-r': 'Firefox functional tests (remote)'
+        'Fxfn-l-nofis': 'Firefox functional tests (local) without fission enabled'
+        'Fxfn-r-nofis': 'Firefox functional tests (remote) without fission enabled'
         'Fxfn-l-fis': 'Firefox functional tests (local) with fission enabled'
         'Fxfn-r-fis': 'Firefox functional tests (remote) with fission enabled'
         'iris': 'Iris testing suite'
@@ -124,6 +126,7 @@ treeherder:
         'T-swr': 'Talos performance tests with software webrender enabled'
         'T-swr-fis': 'Talos performance tests with software webrender enabled'
         'tt': 'Telemetry tests'
+        'tt-nofis': 'Telemetry tests without fission enabled'
         'tt-fis': 'Telemetry tests with fission enabled'
         'SY': 'Are we slim yet tests by TaskCluster'
         'SY-fis': 'Are we slim yet tests by TaskCluster, fission enabled'
