--- a/toolkit/components/extensions/metrics.yaml
+++ b/toolkit/components/extensions/metrics.yaml
@@ -117,6 +117,7 @@ extensions.apis.dnr:
     labels:
       - hit
       - miss
+    telemetry_mirror: EXTENSIONS_APIS_DNR_STARTUP_CACHE_ENTRIES
 
   validate_rules_time:
     type: timing_distribution
