--- a/toolkit/components/extensions/metrics.yaml
+++ b/toolkit/components/extensions/metrics.yaml
@@ -152,6 +152,7 @@ extensions.apis.dnr:
       - https://bugzilla.mozilla.org/show_bug.cgi?id=1803363#c11
     data_sensitivity:
       - technical
+    telemetry_mirror: WEBEXT_DNR_EVALUATE_RULES_MS
 
   evaluate_rules_count_max:
     type: quantity
