--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -2418,7 +2418,7 @@
 
 - name: dom.enable_window_print
   type: bool
-  value: @IS_NOT_ANDROID@
+  value: true
   mirror: always
 
 # Only intended for fuzzing purposes, this will break mozPrintCallback, etc.
