--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -1177,6 +1177,28 @@ migrationWizard:
       description: True if an entrypoint to the migration wizard should be visible in about:preferences.
       type: boolean
       setPref: browser.migrate.preferences-entrypoint.enabled
+    aboutWelcomeBehavior:
+      description: >-
+        When migration is kicked off from about:welcome, there are
+        a few different behaviors that we want to test, controlled
+        by a preference that is instrumented for Nimbus. The pref
+        has the following possible states:
+
+        "autoclose":
+          The user will be directed to the migration wizard in
+          about:preferences, but once the wizard is dismissed,
+          the tab will close.
+
+        "standalone":
+          The migration wizard will open in a new top-level content
+          window.
+
+        "default" / other
+          The user will be directed to the migration wizard in
+          about:preferences. The tab will not close once the
+          user closes the wizard.
+      type: string
+      setPref: browser.migrate.content-modal.about-welcome-behavior
 
 mixedContentUpgrading:
   description: Prefs to control whether we upgrade mixed passive content (images, audio, video) from http to https
