--- a/taskcluster/ci/source-test/puppeteer.yml
+++ b/taskcluster/ci/source-test/puppeteer.yml
@@ -26,6 +26,9 @@ job-defaults:
             - type: file
               name: public/remote/pup_errorsummary.json
               path: /builds/worker/pup_errorsummary.json
+            - type: file
+              name: public/remote/pup_raw.log
+              path: /builds/worker/pup_raw.log
     optimization:
         skip-unless-expanded: null
 
@@ -38,7 +41,7 @@ puppeteer:
         command: >
             cd $GECKO_PATH/ &&
             $MOZ_FETCHES_DIR/firefox/firefox --screenshot http://example.org &&
-            ./mach puppeteer-test --ci -vv --binary $MOZ_FETCHES_DIR/firefox/firefox --headless --log-tbpl - --log-errorsummary /builds/worker/pup_errorsummary.json
+            ./mach puppeteer-test --ci -vv --binary $MOZ_FETCHES_DIR/firefox/firefox --headless --log-tbpl - --log-errorsummary /builds/worker/pup_errorsummary.json --log-raw /builds/worker/pup_raw.log
 
 puppeteer-with-bidi:
     description: Puppeteer tests against Firefox Webdriver BiDi remote protocol
@@ -49,4 +52,4 @@ puppeteer-with-bidi:
         command: >
             cd $GECKO_PATH/ &&
             $MOZ_FETCHES_DIR/firefox/firefox --screenshot http://example.org &&
-            ./mach puppeteer-test --ci -vv --binary $MOZ_FETCHES_DIR/firefox/firefox --bidi --log-tbpl - --log-errorsummary /builds/worker/pup_errorsummary.json
+            ./mach puppeteer-test --ci -vv --binary $MOZ_FETCHES_DIR/firefox/firefox --bidi --log-tbpl - --log-errorsummary /builds/worker/pup_errorsummary.json --log-raw /builds/worker/pup_raw.log
