--- a/browser/components/newtab/test/browser/browser.ini
+++ b/browser/components/newtab/test/browser/browser.ini
@@ -27,6 +27,7 @@ prefs =
 skip-if =
   os == "linux" && bits == 64 && debug # Bug 1784548
 [browser_aboutwelcome_focus.js]
+[browser_aboutwelcome_import.js]
 [browser_aboutwelcome_mobile_downloads.js]
 [browser_aboutwelcome_multistage_video.js]
 [browser_aboutwelcome_multistage_default.js]
