--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -253,6 +253,7 @@ https_first_disabled = true
 [browser_webconsole_css_error_impacted_elements.js]
 [browser_webconsole_custom_formatters.js]
 [browser_webconsole_custom_formatters_errors.js]
+[browser_webconsole_deprecation_warning.js]
 [browser_webconsole_document_focus.js]
 [browser_webconsole_duplicate_errors.js]
 [browser_webconsole_enable_network_monitoring.js]
