--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -296,6 +296,7 @@ https_first_disabled = true
 [browser_webconsole_insecure_passwords_web_console_warning.js]
 [browser_webconsole_inspect_cross_domain_object.js]
 [browser_webconsole_keyboard_accessibility.js]
+[browser_webconsole_lenient_this_warning.js]
 [browser_webconsole_limit_multiline.js]
 [browser_webconsole_location_debugger_link.js]
 fail-if = a11y_checks # bug 1687728 frame-link-filename is not accessible
