--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14260,12 +14260,12 @@
   value: 1.0
   mirror: always
 
-# Maximum amount of time by which it is acceptable to delay the firing of any timer.
+# Maximum amount of time by which it is ever acceptable to delay the firing of a timer.
 # Setting this to zero will effectively disable timer coalescing.
 - name: timer.maximum_firing_delay_tolerance_ms
   type: AtomicFloat
 #ifdef NIGHTLY_BUILD
-  value: 1.0
+  value: 100.0
 #else
   value: 0.0
 #endif
