--- a/taskcluster/ci/test/browsertime-desktop.yml
+++ b/taskcluster/ci/test/browsertime-desktop.yml
@@ -20,6 +20,8 @@ job-defaults:
                 - .*shippable.*
             safari:
                 - .*macos.*shippable.*
+            custom-car:
+                - linux.*shippable.*
             default: []
     test-manifest-loader: null  # don't load tests in the taskgraph
     tier: 3
@@ -36,6 +38,21 @@ job-defaults:
                     - raptor/linux_config.py
         extra-options:
             - --conditioned-profile=settled
+    fetches:
+        toolchain:
+            by-app:
+                custom-car:
+                    by-test-platform:
+                        # this satisfied taskgraph for now, but once mac/win is implemented
+                        # then linux will be the default
+                        linux.*:
+                            - linux64-custom-car
+                            - linux64-minidump-stackwalk
+                            - linux64-fix-stacks
+                        default: []
+                default:
+                    - linux64-minidump-stackwalk
+                    - linux64-fix-stacks
 
 browsertime-tp6:
     <<: &tp6-defaults
@@ -176,7 +193,7 @@ browsertime-tp6-essential:
                         - --extra-profiler-run
                         - --extra-summary-methods=geomean
         raptor:
-            apps: [firefox, chrome, chromium]
+            apps: [firefox, chrome, chromium, custom-car]
             test: tp6
             run-visual-metrics: true
             subtests:
@@ -248,7 +265,7 @@ browsertime-tp6-bytecode:
 browsertime-benchmark:
     description: Raptor (browsertime) Benchmark tests
     raptor:
-        apps: [firefox, chrome, chromium, safari]
+        apps: [firefox, chrome, chromium, safari, custom-car]
         subtests:
             by-app:
                 firefox:
@@ -278,6 +295,9 @@ browsertime-benchmark:
                     - [sunspider, ss]
                     - [unity-webgl, ugl]
                     # - [webaudio, wa] (Bug 1802922)
+                custom-car:
+                    - [speedometer, sp]
+                    - [speedometer3, sp3]
                 default:
                     - ares6
                     - [assorted-dom, dom]
