--- a/widget/tests/browser/browser.ini
+++ b/widget/tests/browser/browser.ini
@@ -1,12 +1,28 @@
+[DEFAULT]
+skip-if = os == 'andriod'
+
 [browser_test_clipboardcache.js]
 skip-if =
-  os == 'android' || (os == 'linux' && ccov) || tsan # Bug 1613516, the test consistently timeouts on Linux coverage builds.
+  (os == 'linux' && ccov) || tsan # Bug 1613516, the test consistently timeouts on Linux coverage builds.
   os == "win" && bits == 32 && !debug # Bug 1759422
   os == "linux" # Bug 1792749
 [browser_test_ContentCache.js]
-skip-if = os == 'android'
+[browser_test_ime_state_on_focus_move_in_remote_content.js]
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_focus_move.js
+[browser_test_ime_state_in_contenteditable_on_focus_move_in_remote_content.js]
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_focus_move.js
+[browser_test_ime_state_in_designMode_on_focus_move_in_remote_content.js]
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_focus_move.js
 [browser_test_InputContextURI.js]
-skip-if = os == 'android'
 [browser_test_swipe_gesture.js]
 run-if = (os == 'mac' || os == 'win' || os == 'linux')
 skip-if =
