--- a/widget/tests/browser/browser.ini
+++ b/widget/tests/browser/browser.ini
@@ -7,6 +7,9 @@ skip-if =
   os == "win" && bits == 32 && !debug # Bug 1759422
   os == "linux" # Bug 1792749
 [browser_test_ContentCache.js]
+[browser_test_ime_state_on_editable_state_change_in_remote_content.js]
+support-files =
+  ../file_ime_state_test_helper.js
 [browser_test_ime_state_on_focus_move_in_remote_content.js]
 support-files =
   file_ime_state_tests.html
